[gd_scene load_steps=14 format=2]

[ext_resource path="res://Menu/Modal/ModalTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menu/Menu.gd" type="Script" id=2]
[ext_resource path="res://Menu/Theme/Theme.tres" type="Theme" id=3]
[ext_resource path="res://Menu/Theme/ButtonReplay.tres" type="Theme" id=4]
[ext_resource path="res://Menu/Theme/Headline02.tres" type="Theme" id=5]
[ext_resource path="res://Menu/Theme/Headline01.tres" type="Theme" id=6]
[ext_resource path="res://Menu/Theme/Headline03.tres" type="Theme" id=7]
[ext_resource path="res://Menu/Theme/ButtonVolume.tres" type="Theme" id=8]
[ext_resource path="res://Menu/Theme/ButtonClose.tres" type="Theme" id=9]
[ext_resource path="res://Menu/Theme/ButtonInfo.tres" type="Theme" id=10]
[ext_resource path="res://Menu/Theme/ButtonBack.tres" type="Theme" id=11]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("CenterContainer/Pivot/ScoreValue:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CenterContainer/Pivot/ScoreValue:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CenterContainer:rect_scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("CenterContainer:rect_scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("CenterContainer/Pivot:rect_scale:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("CenterContainer/Pivot:rect_scale:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=1]
resource_name = "best_score"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("CenterContainer/Pivot:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CenterContainer/Pivot:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[node name="Menu" type="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 2 )
content_container_NodePath = NodePath("ModalTemplate/SafeArea/CenterContainer/PanelContainer")
background_NodePath = NodePath("ModalTemplate/Background")

[node name="ModalTemplate" parent="." instance=ExtResource( 1 )]

[node name="PanelContainer" parent="ModalTemplate/SafeArea/CenterContainer" index="0"]
margin_top = 258.0
margin_bottom = 1022.0

[node name="MarginContainer" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer" index="0"]
margin_bottom = 696.0

[node name="InGame" type="VBoxContainer" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer" index="0"]
unique_name_in_owner = true
margin_right = 417.0
margin_bottom = 624.0
theme = ExtResource( 3 )
custom_constants/separation = 40
alignment = 1

[node name="Space" type="Control" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/InGame"]
margin_right = 417.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ReplayButton" type="Button" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/InGame"]
margin_left = 92.0
margin_top = 40.0
margin_right = 324.0
margin_bottom = 272.0
rect_min_size = Vector2( 232, 232 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 4 )

[node name="HBoxContainer2" type="HBoxContainer" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/InGame"]
margin_top = 312.0
margin_right = 417.0
margin_bottom = 428.0
custom_constants/separation = 40
alignment = 1

[node name="VolumeButton" type="Button" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/InGame/HBoxContainer2"]
margin_left = 72.0
margin_right = 188.0
margin_bottom = 116.0
rect_min_size = Vector2( 116, 116 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 8 )
toggle_mode = true

[node name="InfoButton" type="Button" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/InGame/HBoxContainer2"]
margin_left = 228.0
margin_right = 344.0
margin_bottom = 116.0
rect_min_size = Vector2( 116, 116 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 10 )

[node name="Space2" type="Control" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/InGame"]
margin_top = 468.0
margin_right = 417.0
margin_bottom = 468.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/InGame"]
margin_top = 508.0
margin_right = 417.0
margin_bottom = 624.0
custom_constants/separation = 0
alignment = 1

[node name="CloseButton" type="Button" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/InGame/HBoxContainer3"]
margin_top = 26.0
margin_right = 90.0
margin_bottom = 116.0
rect_min_size = Vector2( 90, 90 )
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource( 9 )

[node name="Space" type="Control" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/InGame/HBoxContainer3"]
margin_left = 90.0
margin_right = 301.0
margin_bottom = 116.0
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/InGame/HBoxContainer3"]
margin_left = 301.0
margin_right = 417.0
margin_bottom = 116.0
rect_min_size = Vector2( 116, 116 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 11 )

[node name="Info" type="VBoxContainer" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer" index="1"]
unique_name_in_owner = true
visible = false
margin_right = 417.0
margin_bottom = 624.0
theme = ExtResource( 3 )
custom_constants/separation = 9
alignment = 1

[node name="Label" type="Label" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/Info"]
margin_right = 417.0
margin_bottom = 70.0
theme = ExtResource( 5 )
text = "INFO_TITLE"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/Info"]
unique_name_in_owner = true
margin_top = 79.0
margin_right = 417.0
margin_bottom = 501.0
size_flags_vertical = 3
theme = ExtResource( 7 )
text = "INFO_TEXT"

[node name="CloseButton" type="Button" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/Info"]
margin_left = 158.0
margin_top = 510.0
margin_right = 258.0
margin_bottom = 610.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 11 )

[node name="EndGame" type="VBoxContainer" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer" index="2"]
unique_name_in_owner = true
visible = false
margin_right = 417.0
margin_bottom = 624.0
theme = ExtResource( 3 )
custom_constants/separation = 80
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/EndGame"]
margin_top = 42.0
margin_right = 417.0
margin_bottom = 255.0
custom_constants/separation = 8
alignment = 1

[node name="Score" type="VBoxContainer" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/EndGame/VBoxContainer"]
margin_right = 417.0
margin_bottom = 135.0
custom_constants/separation = -11

[node name="ScoreLabel" type="Label" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/EndGame/VBoxContainer/Score"]
unique_name_in_owner = true
margin_right = 417.0
margin_bottom = 35.0
rect_min_size = Vector2( 87, 35 )
theme = ExtResource( 7 )
text = "SCORE"
align = 1
uppercase = true

[node name="CenterContainer" type="CenterContainer" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/EndGame/VBoxContainer/Score"]
margin_top = 24.0
margin_right = 417.0
margin_bottom = 135.0
rect_min_size = Vector2( 0, 111 )

[node name="Pivot" type="Control" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/EndGame/VBoxContainer/Score/CenterContainer"]
margin_left = 208.0
margin_top = 55.0
margin_right = 208.0
margin_bottom = 55.0

[node name="ScoreValue" type="Label" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/EndGame/VBoxContainer/Score/CenterContainer/Pivot"]
unique_name_in_owner = true
margin_left = -208.0
margin_top = -55.0
margin_right = 209.0
margin_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 417, 111 )
theme = ExtResource( 6 )
text = "000"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/EndGame/VBoxContainer/Score"]
unique_name_in_owner = true
anims/RESET = SubResource( 2 )
anims/best_score = SubResource( 1 )

[node name="BestScore" type="HBoxContainer" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/EndGame/VBoxContainer"]
unique_name_in_owner = true
margin_top = 143.0
margin_right = 417.0
margin_bottom = 213.0
custom_constants/separation = 20
alignment = 1

[node name="BestScoreLabel" type="Label" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/EndGame/VBoxContainer/BestScore"]
margin_left = 42.0
margin_top = 17.0
margin_right = 212.0
margin_bottom = 52.0
rect_min_size = Vector2( 87, 35 )
theme = ExtResource( 7 )
text = "BEST_SCORE"
align = 1
uppercase = true

[node name="DotsLabel" type="Label" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/EndGame/VBoxContainer/BestScore"]
margin_left = 232.0
margin_top = 17.0
margin_right = 240.0
margin_bottom = 52.0
theme = ExtResource( 7 )
text = ":"

[node name="BestScoreValue" type="Label" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/EndGame/VBoxContainer/BestScore"]
unique_name_in_owner = true
margin_left = 260.0
margin_right = 374.0
margin_bottom = 70.0
rect_min_size = Vector2( 87, 35 )
theme = ExtResource( 5 )
text = "000"
align = 1
uppercase = true

[node name="ReplayButton" type="Button" parent="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/EndGame"]
margin_left = 92.0
margin_top = 335.0
margin_right = 324.0
margin_bottom = 567.0
rect_min_size = Vector2( 232, 232 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 4 )

[connection signal="closed" from="." to="." method="_on_Menu_closed"]
[connection signal="pressed" from="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/InGame/ReplayButton" to="." method="_on_ReplayButton_pressed"]
[connection signal="toggled" from="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/InGame/HBoxContainer2/VolumeButton" to="." method="_on_VolumeButton_toggled"]
[connection signal="pressed" from="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/InGame/HBoxContainer2/InfoButton" to="." method="_on_InfoButton_pressed"]
[connection signal="pressed" from="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/InGame/HBoxContainer3/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/InGame/HBoxContainer3/BackButton" to="." method="close"]
[connection signal="pressed" from="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/Info/CloseButton" to="." method="close"]
[connection signal="pressed" from="ModalTemplate/SafeArea/CenterContainer/PanelContainer/MarginContainer/EndGame/ReplayButton" to="." method="_on_ReplayButton_pressed"]

[editable path="ModalTemplate"]
